# bees-breweries-data-engineering

./: .gitignore  README.md  pyproject.toml  run_pipeline.py  run_validation.py
dags/: breweries_pipeline_dag.py
src/bees_breweries/clients/: brewery.py
src/bees_breweries/config/: settings.py
src/bees_breweries/models/: brewery.py
src/bees_breweries/pipelines/: bronze_pipeline.py  gold_pipeline.py  silver_pipeline.py
src/bees_breweries/storage/: bronze_storage.py  gold_storage.py  silver_storage.py
src/bees_breweries/utils/: logger.py
src/bees_breweries/validations/: data_validation.py
tests/clients/: test_brewery_api_client.py
tests/pipelines/: test_bronze_pipeline.py  test_gold_pipeline.py  test_silver_pipeline.py
tests/storage/: test_bronze_storage.py  test_gold_storage.py  test_silver_storage.py
