[project]
name = "bees-breweries"
version = "0.1.0"
description = "Data pipeline for Open Brewery DB using medallion architecture"
authors = [
    {name = "Heitor Cesarino", email = "heitor.cesarino@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = []

[tool.poetry]
packages = [{ include = "bees_breweries" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
